Bug 266359 - [PATCH] UdisksStorageVolume tries too hard to construct label()
Summary: [PATCH] UdisksStorageVolume tries too hard to construct label()
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: libsolid-udisks (show other bugs)
Version: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Lukáš Tinkl
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-02-15 09:05 UTC by Will Stephenson
Modified: 2011-02-15 17:29 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments
Allow for empty label() by not constructing a return value. (615 bytes, patch)
2011-02-15 09:05 UTC, Will Stephenson
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Will Stephenson 2011-02-15 09:05:11 UTC
Created attachment 57269 [details]
Allow for empty label() by not constructing a return value.

Version:           unspecified (using KDE 4.6.0) 
OS:                Linux

If IdLabel and PartitionLabel are both empty, a value is constructed out of the vendor and product.  The documentation for Solid::StorageVolume::label() states "the volume label if available, QString() otherwise".  This constructed value breaks app logic which allows for label to be empty, and is IMO a step too far



Reproducible: Always
Comment 1 Lukáš Tinkl 2011-02-15 17:29:41 UTC
Git commit 0e6adca725db7f4baf73e7eaf224f47c7c33165f by Lukas Tinkl.
Committed on 15/02/2011 at 17:21.
Pushed by lukas into branch 'KDE/4.6'.

don't try to construct the label too hard

return an empty label instead, as per docs; fixes eg. kio_sysinfo

BUG: 266359

M  +0    -2    solid/solid/backends/udisks/udisksstoragevolume.cpp     

http://commits.kde.org/kdelibs/0e6adca725db7f4baf73e7eaf224f47c7c33165f