don't try to construct the label too hard

return an empty label instead, as per docs; fixes eg. kio_sysinfo

BUG: 266359